--- a/src/component/MainInfo/MainInfo.module.css
+++ b/src/component/MainInfo/MainInfo.module.css
@@ -7,21 +7,13 @@
     background-size: cover;
 }
 
-.mainInfoScroll {
-    padding-top: 170px;
-}
-
 .mainInfo img {
     position: absolute;
     z-index: 2;
 }
 
-.mainInfo .flowerScroll {
-    top: 270px;
-}
-
 .mainInfo .flower {
-    top: 70px;
+    top: 150px;
     right: -175px;
     transform: rotate(230deg);
     animation: moveFlower 2s;
@@ -34,7 +26,7 @@
         transform: rotate(310deg);
     }
     to {
-        top: 70px;
+        top: 150px;
         right: -175px;
         transform: rotate(230deg);
     }
@@ -180,7 +172,7 @@
     align-items: center;
     justify-content: space-between;
     max-width: 60%;
-    margin-left: 250px;
+    margin:50px 0 0 250px;
 }
 
 .mainInfo .container .greeting {
@@ -217,8 +209,6 @@
 }
 
 .mainInfo .container .photoBlock {
-    width: 300px;
-    height: 400px;
     margin-top: 100px;
     perspective: 1000px;
 }
@@ -239,6 +229,8 @@
     height: 400px;
     background-image: url('../../images/I.jpg');
     background-size: cover;
+    backface-visibility: hidden;
+    z-index: 2;
 }
 
 .mainInfo .container .photo:after {
@@ -261,6 +253,7 @@
     transform: rotateY(180deg);
     border: 4px double #949494;
     background-color: #ccc;
+    backface-visibility: hidden;
 }
 
 .mainInfo .container .backSide h2 {
@@ -284,12 +277,7 @@
 @media screen and (max-width: 1440px), (min-device-aspect-ratio: 16/9) {
     .mainInfo .flower {
         width: 450px;
-        top: 80px;
         right: -130px;
-    }
-
-    .mainInfo .flowerScroll {
-        top: 250px;
     }
 
     @keyframes moveFlower {
@@ -299,7 +287,7 @@
             transform: rotate(310deg);
         }
         to {
-            top: 80px;
+            top: 150px;
             right: -130px;
             transform: rotate(230deg);
         }
@@ -470,14 +458,10 @@
 }
 
 @media screen and (max-width: 1100px) {
-    .mainInfo .flower,
-    .mainInfo .flowerScroll,
-    .mainInfo .tablet,
-    .mainInfo .pen,
-    .mainInfo .papers,
-    .mainInfo .red_marker,
-    .mainInfo .black_marker,
-    .mainInfo .paperclip_1,
+    .mainInfo .flower, .mainInfo,
+    .mainInfo .tablet, .mainInfo .pen,
+    .mainInfo .papers, .mainInfo .red_marker,
+    .mainInfo .black_marker, .mainInfo .paperclip_1,
     .mainInfo .paperclip_2 {
         display: none;
     }
@@ -487,9 +471,9 @@
     }
 
     .mainInfo .container {
-        max-width: 80%;
+        width: 80%;
         justify-content: space-between;
-        margin: 0 auto;
+        margin: 50px auto;
     }
 
     .mainInfo .container .greeting {
