--- a/src/component/Slogan/Slogan.module.css
+++ b/src/component/Slogan/Slogan.module.css
@@ -1,7 +1,7 @@
 .slogan {
     /*background-image: url('http://wpdemos.themezaa.com/pofo/wp-content/uploads/2017/06/testimonial-bg.png');*/
     background-color: #f7f7f7;
-    height: 40vh;
+    height: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,6 +22,11 @@
     font-weight: 600;
     color: #232323;
     margin-top: 30px;
+}
+@media screen and (max-width: 1440px), (min-device-aspect-ratio: 16/9) {
+    .slogan {
+        height: 40vh;
+    }
 }
 
 @media screen and (max-width: 1100px){
