--- a/src/component/common/Button/Button.module.css
+++ b/src/component/common/Button/Button.module.css
@@ -15,6 +15,10 @@
     cursor: pointer;
 }
 
+.projectShowBtn:focus{
+    outline: none;
+}
+
 @media screen and (max-width: 1100px) and (min-width: 760px ) {
     .projectShowBtn {
         height: 35px;
